[gd_scene load_steps=2 format=3 uid="uid://brev2ys3yu4hg"]

[ext_resource type="Script" uid="uid://dgonwsenbb23a" path="res://src/scripts/utils/main_menu.gd" id="1_rm437"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rm437")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.091
anchor_right = 0.5
anchor_bottom = 0.091
offset_left = -99.0
offset_top = -28.9
offset_right = 99.0
offset_bottom = 25.1
grow_horizontal = 2
theme_override_font_sizes/font_size = 39
text = "Franchiser"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.227
anchor_right = 1.0
anchor_bottom = 0.771
offset_top = -0.300018
offset_bottom = 0.0999756
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="NewGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(35, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "New Game	"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(35, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Load Game"

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(35, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(35, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
